🐞 fix issue with scrollbar

--- a/hcu-urban-model-builder-client/app/styles/app.scss
+++ b/hcu-urban-model-builder-client/app/styles/app.scss
@@ -123,7 +123,6 @@ main {
 .toolbar__container {
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: get-spacer(3);
   overflow: auto;
 }
